--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 Contact us
               </a>
             </li>
+            <li class="lang">
+              <a href="index-ar.html">
+                العربية
+              </a>
+            </li>
           </ul>
         </nav>
         <div class="header-icons">
